testdata/baselines/reference/submodule/compiler/constructorPropertyJs.errors.txt
/a.js(3,16): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class C {
        /**
         * @param {any} a
                   ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        foo(a) {
            this.constructor = a;
        }
    }
    